--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <title>Acme Product Management</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
+    <script src="./app/app.js"></script>
 </head>
-<body ng-app="ngLocale">
+<body ng-app="productManagement">
 <table ng-init='products = [
 {
 "productId": 1,
