--- a/index.html
+++ b/index.html
@@ -5,34 +5,10 @@
     <title>Acme Product Management</title>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script src="./app/app.js"></script>
+    <script src="./app/products/productListController.js"></script>
 </head>
 <body ng-app="productManagement">
-<table ng-init='products = [
-{
-"productId": 1,
-"productName": "Leaf Rake",
-"productCode": "GDN-0011",
-"releaseDate": "March 20, 2009",
-"description": "Leaf rake with 48-inch handle.",
-"cost": 9.00,
-"price": 19.95,
-"category": "garden",
-"tags": [ "leaf", "tool" ],
-"imageUrl": "http://openclipart.org/image/300px/svg_to_png/26215/Anonymous_Leaf_Rake.png"
-},
-{
-"productId": 5,
-"productName": "Hammer",
-"productCode": "TBX-0048",
-"releaseDate": "May 21, 2013",
-"description": "Curved claw steel hammer",
-"cost": 1.00,
-"price": 8.99,
-"category": "toolbox",
-"tags": ["tool"],
-"imageUrl": "http://openclipart.org/image/300px/svg_to_png/73/rejon_Hammer.png"
-}
-]'>
+<table ng-controller="ProductListController">
     <thead>
     <tr>
         <th>Image</th>
