--- a/index.html
+++ b/index.html
@@ -11,17 +11,21 @@
 <table ng-controller="ProductListController">
     <thead>
     <tr>
-        <th>Image</th>
-        <th>Product</th>
-        <th>Code</th>
-        <th>Available</th>
-        <th>Price</th>
+        <td>
+            <button type="button" ng-click="toggleImage()">
+                {{showImage?"Hide":"Show"}} Image
+            </button>
+        </td>
+        <td>Product</td>
+        <td>Code</td>
+        <td>Available</td>
+        <td>Price</td>
     </tr>
     </thead>
     <tbody>
     <tr ng-repeat="product in products">
         <td>
-            <img ng-src="{{product.imageUrl}}" style="width:50px;margin:2px" title="{{product.productName}}"/>
+            <img ng-src="{{product.imageUrl}}" ng-if="showImage" style="width:50px;margin:2px" title="{{product.productName}}"/>
         </td>
         <td>{{product.productName}}</td>
         <td>{{product.productCode}}</td>
