style with bootstrap

--- a/index.html
+++ b/index.html
@@ -3,39 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <title>Acme Product Management</title>
+
+    <link rel="stylesheet" href="./css/app.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script src="./app/app.js"></script>
     <script src="./app/products/productListController.js"></script>
+
 </head>
-<body ng-app="productManagement">
-<table ng-controller="ProductListController">
-    <thead>
-    <tr>
-        <td>
-            <button type="button" ng-click="toggleImage()">
-                {{showImage?"Hide":"Show"}} Image
-            </button>
-        </td>
-        <td>Product</td>
-        <td>Code</td>
-        <td>Available</td>
-        <td>Price</td>
-    </tr>
-    </thead>
-    <tbody>
-    <tr ng-repeat="product in products">
-        <td>
-            <img ng-src="{{product.imageUrl}}" ng-if="showImage" style="width:50px;margin:2px" title="{{product.productName}}"/>
-        </td>
-        <td>{{product.productName}}</td>
-        <td>{{product.productCode}}</td>
-        <td>{{product.releaseDate}}</td>
-        <td>{{product.price | currency}}</td>
-    </tr>
-    </tbody>
-    <tr>
-    </tr>
-</table>
+<body id="body-color" ng-app="productManagement">
+
+
+<div class="panel panel-primary">
+    <div class="panel-heading" style="font-size: large;">
+        Product List
+    </div>
+    <div class="panel-body">
+        <table class="table" ng-controller="ProductListController">
+            <thead>
+            <tr>
+                <td>
+                    <button class="btn btn-primary" type="button" ng-click="toggleImage()">
+                        {{showImage?"Hide":"Show"}} Image
+                    </button>
+                </td>
+                <td>Product</td>
+                <td>Code</td>
+                <td>Available</td>
+                <td>Price</td>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="product in products">
+                <td>
+                    <img ng-src="{{product.imageUrl}}" ng-if="showImage" style="width:50px;margin:2px"
+                         title="{{product.productName}}"/>
+                </td>
+                <td>{{product.productName}}</td>
+                <td>{{product.productCode}}</td>
+                <td>{{product.releaseDate}}</td>
+                <td>{{product.price | currency}}</td>
+            </tr>
+            </tbody>
+            <tr>
+            </tr>
+        </table>
+    </div>
+</div>
 
 </body>
 </html>
