--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
     <link rel="stylesheet" href="./css/app.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-resource/1.5.6/angular-resource.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.5.6/angular-mocks.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-route.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     <script src="./app/app.js"></script>
     <script src="./app/products/productListController.js"></script>
     <script src="./common/services/common.services.js"></script>
@@ -19,42 +23,32 @@
 </head>
 <body id="body-color" ng-app="productManagement">
 
+<nav class="navbar navbar-inverse">
+    <div class="container">
+        <a href="#/" class="navbar-brand">Acme Product Management</a>
+        <div class="navbar-header">
+            <button type="button"
+                    class="navbar-toggle"
+                    data-toggle="collapse"
+                    data-target=".navbar-collapse">
+                <span class="sr-only">Toggle Navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
+        <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+                <li><a href="#/products">Product List</a></li>
+                <li><a><i class="glyphicon glyphicon-plus"></i>Add Product</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
-<div class="panel panel-primary">
-    <div class="panel-heading" style="font-size: large;">
-        Product List
-    </div>
-    <div class="panel-body">
-        <table class="table" ng-controller="productListController">
-            <thead>
-            <tr>
-                <td>
-                    <button class="btn btn-primary" type="button" ng-click="toggleImage()">
-                        {{showImage?"Hide":"Show"}} Image
-                    </button>
-                </td>
-                <td>Product</td>
-                <td>Code</td>
-                <td>Available</td>
-                <td>Price</td>
-            </tr>
-            </thead>
-            <tbody>
-            <tr ng-repeat="product in products">
-                <td>
-                    <img ng-src="{{product.imageUrl}}" ng-if="showImage" style="width:50px;margin:2px"
-                         title="{{product.productName}}"/>
-                </td>
-                <td>{{product.productName}}</td>
-                <td>{{product.productCode}}</td>
-                <td>{{product.releaseDate}}</td>
-                <td>{{product.price | currency}}</td>
-            </tr>
-            </tbody>
-            <tr>
-            </tr>
-        </table>
-    </div>
+
+<div class="container">
+<div ng-view></div>
 </div>
 
 </body>
