--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <script src="./common/services/common.services.js"></script>
     <script src="./common/services/productResource.js"></script>
     <script src="./common/services/productResourceMock.js"></script>
+    <script src="./app/products/productDetailController.js"></script>
 
 </head>
 <body id="body-color" ng-app="productManagement">
