resolve : productResource not returning a product

--- a/app/products/productListView.html
+++ b/app/products/productListView.html
@@ -24,7 +24,7 @@
                          title="{{product.productName}}"/>
                 </td>
                 <td>
-                    <a href="#/products/{{product.productId}}">
+                    <a ui-sref="productDetail({productId: product.productId})">
                         {{product.productName}}
                     </a>
                 </td>
